# FunShop

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/: auth.py  products.py  router.py
backend/app/core/: config.py
backend/app/models/: category.py  product.py  user.py
backend/app/schemas/: auth.py  category.py  product.py
backend/app/services/: auth_service.py  product_service.py
backend/migrations/: env.py
backend/migrations/versions/: 4cf1364f77c9_init.py  6fd7510dd57a_init.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_categories.py  test_products.py
frontend/: Dockerfile  next.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(main)/cart/: page.tsx
frontend/src/app/(main)/checkout/: page.tsx
frontend/src/components/cart/: CartItem.tsx  CartSummary.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/products/: AddToCartButton.tsx  ProductCard.tsx  ProductFilters.tsx  ProductGrid.tsx  ProductSkeleton.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Logo.tsx
frontend/src/hooks/: useFilters.ts  useInfiniteProducts.ts
frontend/src/lib/: axios.ts
frontend/src/lib/api/: categories.ts  products.ts
frontend/src/store/: cartStore.ts
frontend/src/types/: product.ts
(+9 files in other folders)
